chore: minor changes
UI improvement
1. in boss match page, player's name and boss' name now share same width
2. improved buttons appearance in settings page

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -5,7 +5,7 @@
     </div>
     <h2>MyHolo <span class="app_version"></span></h2>
     <div>
-        <button onclick="doSetName();">修改玩家暱稱</button><br>
+        <button onclick="doSetName();">修改玩家暱稱</button>
         <button class="danger" onclick="doResetAll();">重設遊戲進度</button>
     </div>
 </div>
