--- a/src/html/level.html
+++ b/src/html/level.html
@@ -16,13 +16,13 @@
         </div>
         <div>
             <div class="flex_container" style="width: 570px; margin: 0 auto">
-                <div style="flex-grow: 1">
+                <div style="width: 50%;">
                     <p class="centered" style="margin-bottom: 0">挑戰者</p>
                     <h2 class="my_name centered" style="margin-top: 4px">
                         玩家暱稱
                     </h2>
                 </div>
-                <div style="flex-grow: 1">
+                <div style="width: 50%;">
                     <p class="centered" style="margin-bottom: 0">關主</p>
                     <h2 class="boss_name centered" style="margin-top: 4px">
                         關主暱稱
