feat: show current level
current level is shown inside match page

--- a/src/html/level.html
+++ b/src/html/level.html
@@ -1,4 +1,11 @@
 <div id="boss_match" hidden>
+    <div>
+        <h3 class="centered" style="margin-top: 40px; margin-bottom: 0; font-size: 24px;">
+            《挑戰・第
+            <span class="cur_level"></span>
+            層》
+        </h3>
+    </div>
     <div class="flex_container">
         <div>
             <img
