chore: minor changes on respawn points
1. respawn points given in every level is constant (7 points per level passed)
2. all respawn points gained can be allocated freely, instead of the unallocated ones only

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
             <li id="nav_my" class="NavTarget">我的HOLO</li>
             <li id="nav_lvl" class="NavTarget">樓層挑戰</li>
             <li id="nav_resp" class="NavTarget">畢業系統</li>
-            <li id="nav_adv" class="NavTarget">成就列表</li>
+            <li id="nav_adv" class="NavTarget debug">成就列表</li>
             <li id="nav_rec" class="NavTarget">挑戰紀錄</li>
             <li id="nav_dev" class="NavTarget debug">測試工具</li>
         </ul>
