feat: shortened idle time
shortened idle time 60 times faster to accelerate game progress

--- a/src/html/myholo.html
+++ b/src/html/myholo.html
@@ -65,43 +65,43 @@
         <table id="my_streams" style="margin: 0 auto">
             <tr onclick="doIdle(1)">
                 <td>一位就關臺</td>
-                <td>8 hr</td>
+                <td>8 min</td>
             </tr>
             <tr onclick="doIdle(2)">
                 <td>遊戲直播</td>
-                <td>4 hr</td>
+                <td>4 min</td>
             </tr>
             <tr onclick="doIdle(3)">
                 <td>聯動貼貼</td>
-                <td>2 hr</td>
+                <td>2 min</td>
             </tr>
             <tr onclick="doIdle(4)">
                 <td>感謝祭</td>
-                <td>1 hr</td>
+                <td>1 min</td>
             </tr>
             <tr onclick="doIdle(5)">
                 <td>歌回</td>
-                <td>30 min</td>
+                <td>30 sec</td>
             </tr>
             <tr onclick="doIdle(6)">
                 <td>吃棉花糖</td>
-                <td>10 min</td>
+                <td>10 sec</td>
             </tr>
             <tr onclick="doIdle(7)">
                 <td>迷因鑑賞</td>
-                <td>5 min</td>
+                <td>5 sec</td>
             </tr>
             <tr onclick="doIdle(8)">
                 <td>雜談</td>
-                <td>3 min</td>
+                <td>3 sec</td>
             </tr>
             <tr onclick="doIdle(9)">
                 <td>精華剪輯</td>
-                <td>2 min</td>
+                <td>2 sec</td>
             </tr>
             <tr onclick="doIdle(10)">
                 <td>光速下播</td>
-                <td>1 min</td>
+                <td>1 sec</td>
             </tr>
         </table>
         <p class="my_stream_cd" hidden>
