--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             <li id="nav_home" class="NavTarget">設定</li>
             <li id="nav_my" class="NavTarget">我的HOLO</li>
             <li id="nav_lvl" class="NavTarget">樓層挑戰</li>
-            <li id="nav_resp" class="NavTarget">畢業系統</li>
+            <li id="nav_resp" class="NavTarget">畢業轉生</li>
             <li id="nav_adv" class="NavTarget debug">成就列表</li>
             <li id="nav_rec" class="NavTarget">挑戰紀錄</li>
             <li id="nav_dev" class="NavTarget debug">測試工具</li>
