--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
             MyHolo<span onclick="tryDebugMode();">&nbsp;</span><span class="app_version"></span>
         </h1>
         <ul id="navList">
-            <li id="nav_home" class="NavTarget">關於</li>
+            <li id="nav_home" class="NavTarget">設定</li>
             <li id="nav_my" class="NavTarget">我的HOLO</li>
             <li id="nav_lvl" class="NavTarget">樓層挑戰</li>
             <li id="nav_resp" class="NavTarget">畢業系統</li>
