feat: support updating player name
player name can be updated in settings page

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -1,9 +1,11 @@
 <div class="flex_container" style="flex-flow: column; text-align: center">
     <div class="flex_container">
         <div id="popup" class="hidden">meowmeowmeowmeow!!!!!!</div>
+        <div id="popup_block" onclick="(function(){})();"></div>
     </div>
     <h2>MyHolo <span class="app_version"></span></h2>
     <div>
+        <button onclick="doSetName();">修改玩家暱稱</button><br>
         <button class="danger" onclick="doResetAll();">重設遊戲進度</button>
     </div>
 </div>
